<resources>
    <string name="app_name">QuickHelp</string>
    <string name="facebook_app_id">353710885057183</string>
    <string name="fb_login_protocol_scheme">fb353710885057183</string>
    <string name="title_activity_main">Quick Help</string>
    <string name="title_activity_new_petition">Peticion nueva</string>
    <string name="title_activity_comments">Comentarios</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Filtrar</string>

    <string name="hint_titulo">Descripción breve de la solicitud</string>
    <string name="hint_detalle">Detalle de solicitud</string>
    <string name="hint_category">Categoria de solicitud</string>
    <string name="hint_personas">Numero de personas</string>
    <string name="fecha_tope">Fecha tope para la solicitud</string>
    <string name="anunciante">Anunciante</string>
    <string name="postulante">Postulante</string>
    <string name="como_anunciante">Como anunciante</string>
    <string name="como_postulante">Como postulante</string>
</resources>
